--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "logo":"https://telegra.ph/file/06bab8d2aca8660c3b487.jpg",
-  "name": "Devil Tag All Bot",
+  "name": "Gohan TagAll Bot",
   "description": "A member tagger bot for telegram Groups.",
   "env": {
     "TOKEN": {
