--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "logo":"https://telegra.ph/file/4897e471f572949bdd16e.jpg",
-  "name": "Gohan TagAll Bot",
+  "name": "IamGroot TagAll Bot",
   "description": "A member tagger bot for telegram Groups.",
   "env": {
     "TOKEN": {
